--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Document</title>
 </head>
 <body>
+  <form id="form">
+    <input id="full-name" type="text" placeholder="Full name">
+    <input type="submit" value="Search">
+  </form>
+  <div id="info">
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
